<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.example.urbandictionaryapp.presentation.MainViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilTerm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/search_for_a_definition"
                android:text="@={viewModel.term}" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/tvSortBy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_sort_by"
            app:layout_constraintEnd_toStartOf="@id/ivLike"
            app:layout_constraintTop_toBottomOf="@id/tilTerm" />

        <ImageView
            android:id="@+id/ivLike"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:contentDescription="@string/iv_sort_by_likes"
            android:onClick="@{() -> viewModel.sortByDefinitions(true)}"
            android:src="@drawable/hand01"
            app:layout_constraintEnd_toStartOf="@id/ivDislike"
            app:layout_constraintTop_toBottomOf="@id/tilTerm" />

        <ImageView
            android:id="@+id/ivDislike"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:contentDescription="@string/iv_sort_by_dislikes"
            android:onClick="@{() -> viewModel.sortByDefinitions(false)}"
            android:rotation="180"
            android:src="@drawable/hand01"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tilTerm" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvDefinitions"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ivLike" />

        <ProgressBar
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:visibility="@{viewModel.loading}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.exoplayer2.ui.SimpleExoPlayerView
            android:id="@+id/epSound"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:background="@android:color/transparent"
            android:visibility="gone" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>